# corsair_hs_80_Wireless_lib

./: .gitignore  BRIGHTNESS_ZONES_GUIDE.md  BUILD_GUIDE.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CMakeLists.txt  EVENT_DOCUMENTATION.md  HS80.sln  HS80_Analyzer.cpp  HS80_Demo.cpp  HS80_Library.cpp  HS80_Library.h  HS80_Log_20251026_200700.txt  KEEP_ALIVE_GUIDE.md  LIBRARY_README.md  README.md  README_SETUP.md  VSCODE_QUICKREF.md  build.bat  build.ps1  build_library.bat  corsair_cli.py  requirements.txt
HS80/: HS80.cpp  HS80.vcxproj  HS80.vcxproj.filters  HS80_Analyzer.cpp  HS80_Demo.cpp  HS80_Library.cpp  HS80_Library.h  READme.txt
bak/: HS80.cpp
